fix(core): change it-header-navbar-wrapper z-index

--- a/src/scss/custom/_header.scss
+++ b/src/scss/custom/_header.scss
@@ -13,7 +13,7 @@
       transition: padding-top 0.3s ease;
 
       position: absolute;
-      z-index: 2;
+      z-index: 3;
       left: 0;
       top: 50%;
       margin-top: -$header-nav-button-distance;
